Spacing Fix

--- a/projects/p1/css/emoji-styles.css
+++ b/projects/p1/css/emoji-styles.css
@@ -1,6 +1,5 @@
 *{
     margin: 0px;
-    margin-top: 16px;
 }
 
 body{
@@ -14,7 +13,7 @@ body{
 .curtains{
     width: 100%;
     height: 16px;
-    margin-top: -15px;
+    margin-top: 18px;
 }
 
 .rod{
@@ -39,23 +38,19 @@ body{
     transform: translate(0px, -20px);
 }
 
-
-/* Base */
-.mottos{
-    margin-top: 0px;
-}
-
 /* Base */
 
 .flex{
     display: flex;
     flex-wrap:nowrap;
+    height: 2000px;
+    margin-top: -34px;
 }
 
 .main{
     background-color: rgb(242, 242, 242);
     width: 1256px;
-    margin-top: 16px;
+    margin-top: 40px;
     margin-left: 32px;
     margin-right: 32px;
 }
@@ -63,18 +58,18 @@ body{
 .columns{
     background-color: #d82f1f;
     width: 300px;
-    height: 2000px;
-    margin-top: -34px;
+    height: 100%;
+    margin-top: 0px;
 }
 
 .left-column{
-    padding-top: 40px;
+    padding-top: 54px;
     margin-left: 16px;
     margin-right: 16px;
 }
 
 .right-column{
-    padding-top: 40px;
+    padding-top: 54px;
     margin-left: 16px;
     margin-right: 16px;
 }
@@ -96,6 +91,10 @@ body{
 
 .today{
     padding-left: 33%;
+}
+
+.mottos{
+    margin-top: 0px;
 }
 
 
@@ -129,7 +128,7 @@ h3{
     font-size: 14pt;
     color: #d82f1f;
 
-    margin-top: 0px;
+    margin-top: 16px;
     margin-bottom: 8px;
 }
 
